Change: fix wrap content

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -68,6 +68,10 @@ a:visited {
     color: #0067b8;
 }
 
+a:link {
+    color: #0067b8;
+}
+
 a {
     text-decoration: none;
     background-color: transparent;
